--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,8 +1,8 @@
 #title {
-    background-color: darkgoldenrod;
+    background-color: yellow;
 }
 
 .navbar {
     padding: 0 0 4.5rem;
-    background-color: darkgoldenrod;
+    background-color: yellow;
 }
