--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,8 +1,8 @@
 #title {
-    background-color: yellow;
+    background-color: rgb(228, 228, 42);
 }
 
 .navbar {
     padding: 0 0 4.5rem;
-    background-color: yellow;
+    background-color: rgb(255, 255, 91);
 }
